--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "axios": "^1.7.2",
+    "http-proxy-middleware": "^3.0.0",
     "parse-html": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
